--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "agent-next-boilerplate",
   "version": "0.2.0",
   "private": true,
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
     "dev": "concurrently \"next dev\" \"pnpm make-agent dev\"",
     "dev:agent": "next dev",
-    "prepare": "turbo build --filter=make-agent",
+    "prepare": "make-agent build",
     "build": "next build",
     "build:deploy": "next build && pnpm make-agent deploy -u https://agent-next-boilerplate.vercel.app",
     "start": "next start",
