--- a/turbo.json
+++ b/turbo.json
@@ -1,14 +1,11 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "extends": ["//"],
   "tasks": {
     "build": {
-      "dependsOn": ["^build", "make-agent#build"]
+      "dependsOn": ["^build"]
     },
     "dev": {
-      "dependsOn": ["make-agent#build"],
-      "persistent": true,
-      "inputs": ["**/make-agent/**/*"]
+      "persistent": true
     }
   }
 }
